--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<nav id="navbar" class="fixed top-0 left-0 right-0 60 backdrop-blur-sm z-50 text-white transition-colors duration-300">
 			<div class="container mx-auto px-6">
 				<div class="flex justify-between items-center h-16">
-					<div class="text-xl font-bold flex items-center gap-2"><img src="img/380938694_1318676755440881_1850078113817887475_n.png" alt="profil" class="w-10 h-10 rounded-full object-cover" />Teknik Komputer A</div>
+					<div class="text-xl font-bold flex items-center gap-2"><img src="../img/380938694_1318676755440881_1850078113817887475_n.png" alt="profil" class="w-10 h-10 rounded-full object-cover" />Teknik Komputer A</div>
 
 					<!-- Hamburger Icon -->
 					<button id="menu-btn" class="md:hidden focus:outline-none text-2xl">
@@ -28,7 +28,7 @@
 						<a href="#tentang" class="hover:text-opacity-80">Tentang</a>
 						<a href="#anggota" class="hover:text-opacity-80">Anggota</a>
 						<a href="#sosial" class="hover:text-opacity-80">Sosial Media</a>
-						<a href="galeri.html" class="hover:text-opacity-80">Galeri</a>
+						<a href="galeri/galeri.html" class="hover:text-opacity-80">Galeri</a>
 					</div>
 				</div>
 
@@ -44,7 +44,7 @@
 		</nav>
 		<!-- Hero Section -->
 		<div id="hero" class="relative min-h-screen overflow-hidden">
-			<div class="absolute inset-0 bg-cover bg-center blur-bg" style="background-image: url('img/NUSTEL.IN_33.webp')"></div>
+			<div class="absolute inset-0 bg-cover bg-center blur-bg" style="background-image: url('../img/NUSTEL.IN_33.webp')"></div>
 			<div class="hero-gradient relative inset-0 pt-16">
 				<div class="container mx-auto px-4 h-screen flex flex-col justify-center items-center text-white relative z-10">
 					<h1 class="text-6xl font-bold mb-2 text-center">Teknik Komputer A</h1>
@@ -83,7 +83,7 @@
 
 						<!-- Gambar (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
-							<img src="img/1 (1).webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+							<img src="../img/1 (1).webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 					</div>
 
@@ -91,7 +91,7 @@
 					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
 						<!-- Gambar (mobile atas, desktop kiri) -->
 						<div class="md:w-5/12 order-2 md:order-1">
-							<img src="img/2.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
+							<img src="../img/2.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 
 						<!-- Titik Tengah -->
@@ -119,14 +119,14 @@
 
 						<!-- Gambar (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
-							<img src="img/IMG_0024.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+							<img src="../img/IMG_0024.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 					</div>
 					<!-- SEMESTER 4 -->
 					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
 						<!-- Gambar (mobile atas, desktop kiri) -->
 						<div class="md:w-5/12 order-2 md:order-1">
-							<img src="img/IMG_1179.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
+							<img src="../img/IMG_1179.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 
 						<!-- Titik Tengah -->
@@ -157,14 +157,14 @@
 
 						<!-- Gambar (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
-							<img src="img/WhatsApp Image 2025-01-14 at 19.09.19.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+							<img src="../img/WhatsApp Image 2025-01-14 at 19.09.19.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 					</div>
 					<!-- SEMESTER 6 -->
 					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
 						<!-- Gambar (mobile atas, desktop kiri) -->
 						<div class="md:w-5/12 order-2 md:order-1">
-							<img src="img/WhatsApp Image 2025-04-27 at 11.06.56.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
+							<img src="../img/WhatsApp Image 2025-04-27 at 11.06.56.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 
 						<!-- Titik Tengah -->
@@ -194,7 +194,7 @@
 
 						<!-- Gambar (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
-							<img src="img/WhatsApp Image 2025-01-14 at 19.09.19.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+							<img src="../img/WhatsApp Image 2025-01-14 at 19.09.19.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 					</div>
 				</div>
@@ -214,8 +214,8 @@
 				<!-- Ketua -->
 				<div class="flex justify-center mb-12">
 					<div class="flex flex-col items-center">
-						<img src="img/ketua.webp" alt="Ketua" class="w-24 h-24 rounded-full object-cover mb-2 border-4 border-primary" />
-						<h3 class="font-semibold text-lg">Ahmad Rizki</h3>
+						<img src="../img/ketua.webp" alt="Ketua" class="w-24 h-24 rounded-full object-cover mb-2 border-4 border-primary" />
+						<h3 class="font-semibold text-lg">Irfan Wahyudi</h3>
 						<p class="text-gray-600">Ketua</p>
 					</div>
 				</div>
@@ -223,23 +223,23 @@
 				<!-- Sekretaris, Wakil, Bendahara -->
 				<div class="grid grid-cols-2 md:grid-cols-4 gap-8 mb-12 justify-center">
 					<div class="flex flex-col items-center">
-						<img src="img/sek1.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
-						<h3 class="font-semibold text-sm">Raisa</h3>
+						<img src="../img/sek1.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<h3 class="font-semibold text-sm">Nabila Febrianti</h3>
 						<p class="text-gray-500 text-sm">Sekretaris 1</p>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="img/sek2.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
-						<h3 class="font-semibold text-sm">Iqbal</h3>
+						<img src="../img/sek2.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<h3 class="font-semibold text-sm">Baiq Raehul Aema Oktari</h3>
 						<p class="text-gray-500 text-sm">Sekretaris 2</p>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="img/wakil.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
-						<h3 class="font-semibold text-sm">Nina</h3>
+						<img src="../img/wakil.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<h3 class="font-semibold text-sm">Muhammad Samsul Al Kifli</h3>
 						<p class="text-gray-500 text-sm">Wakil Ketua</p>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="img/bendahara.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
-						<h3 class="font-semibold text-sm">Taufik</h3>
+						<img src="../img/bendahara.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<h3 class="font-semibold text-sm">Liana</h3>
 						<p class="text-gray-500 text-sm">Bendahara</p>
 					</div>
 				</div>
@@ -247,12 +247,12 @@
 				<!-- Anggota -->
 				<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6">
 					<div class="flex flex-col items-center">
-						<img src="img/anggota1.webp" class="w-16 h-16 rounded-full object-cover mb-2 border" />
-						<h3 class="text-sm font-medium">Dewi</h3>
+						<img src="../img/anggota1.webp" class="w-16 h-16 rounded-full object-cover mb-2 border" />
+						<h3 class="text-sm font-medium">Nisa Pra Utami</h3>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="img/anggota2.webp" class="w-16 h-16 rounded-full object-cover mb-2 border" />
-						<h3 class="text-sm font-medium">Fahmi</h3>
+						<img src="../img/anggota2.webp" class="w-16 h-16 rounded-full object-cover mb-2 border" />
+						<h3 class="text-sm font-medium">Ripal Algifari</h3>
 					</div>
 					<!-- Tambah anggota lain sesuai kebutuhan -->
 				</div>
@@ -263,7 +263,16 @@
 			<div class="container mx-auto">
 				<h2 class="text-4xl font-bold text-center mb-12 text-primary">Anggota Kelas</h2>
 				<div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-5 gap-6">
-					<div class="group transition-transform hover:-translate-y-2">
+					<div
+						class="group transition-transform hover:-translate-y-2 cursor-pointer"
+						onclick="openModal(
+					'Ahmad Rizki',
+					'Ketua kelas Teknik Komputer A yang aktif dan bertanggung jawab.',
+					'https:https://www.instagram.com/ridho_firmansyah19/',
+					'https://link-ke-linkedin.com',
+					'https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=1&orientation=squarish'
+					)"
+					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
 								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=1&orientation=squarish"
@@ -276,7 +285,16 @@
 							<p class="text-gray-600">Ketua Kelas</p>
 						</div>
 					</div>
-					<div class="group transition-transform hover:-translate-y-2">
+					<div
+						class="group transition-transform hover:-translate-y-2 cursor-pointer"
+						onclick="openModal(
+					'Ahmad Rizki',
+					'Ketua kelas Teknik Komputer A yang aktif dan bertanggung jawab.',
+					'https:https://www.instagram.com/ridho_firmansyah19/',
+					'https://link-ke-linkedin.com',
+					'https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=1&orientation=squarish'
+					)"
+					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
 								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20female%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=2&orientation=squarish"
@@ -289,7 +307,16 @@
 							<p class="text-gray-600">Wakil Ketua</p>
 						</div>
 					</div>
-					<div class="group transition-transform hover:-translate-y-2">
+					<div
+						class="group transition-transform hover:-translate-y-2 cursor-pointer"
+						onclick="openModal(
+					'Ahmad Rizki',
+					'Ketua kelas Teknik Komputer A yang aktif dan bertanggung jawab.',
+					'https:https://www.instagram.com/ridho_firmansyah19/',
+					'https://link-ke-linkedin.com',
+					'https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=1&orientation=squarish'
+					)"
+					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
 								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20male%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=3&orientation=squarish"
@@ -302,7 +329,16 @@
 							<p class="text-gray-600">Sekretaris</p>
 						</div>
 					</div>
-					<div class="group transition-transform hover:-translate-y-2">
+					<div
+						class="group transition-transform hover:-translate-y-2 cursor-pointer"
+						onclick="openModal(
+					'Ahmad Rizki',
+					'Ketua kelas Teknik Komputer A yang aktif dan bertanggung jawab.',
+					'https:https://www.instagram.com/ridho_firmansyah19/',
+					'https://link-ke-linkedin.com',
+					'https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=1&orientation=squarish'
+					)"
+					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
 								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20female%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=4&orientation=squarish"
@@ -315,7 +351,16 @@
 							<p class="text-gray-600">Bendahara</p>
 						</div>
 					</div>
-					<div class="group transition-transform hover:-translate-y-2">
+					<div
+						class="group transition-transform hover:-translate-y-2 cursor-pointer"
+						onclick="openModal(
+					'Ahmad Rizki',
+					'Ketua kelas Teknik Komputer A yang aktif dan bertanggung jawab.',
+					'https:https://www.instagram.com/ridho_firmansyah19/',
+					'https://link-ke-linkedin.com',
+					'https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=1&orientation=squarish'
+					)"
+					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
 								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20male%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=5&orientation=squarish"
@@ -328,7 +373,16 @@
 							<p class="text-gray-600">Anggota</p>
 						</div>
 					</div>
-					<div class="group transition-transform hover:-translate-y-2">
+					<div
+						class="group transition-transform hover:-translate-y-2 cursor-pointer"
+						onclick="openModal(
+					'Ahmad Rizki',
+					'Ketua kelas Teknik Komputer A yang aktif dan bertanggung jawab.',
+					'https:https://www.instagram.com/ridho_firmansyah19/',
+					'https://link-ke-linkedin.com',
+					'https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=1&orientation=squarish'
+					)"
+					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
 								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20female%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=6&orientation=squarish"
@@ -341,7 +395,16 @@
 							<p class="text-gray-600">Anggota</p>
 						</div>
 					</div>
-					<div class="group transition-transform hover:-translate-y-2">
+					<div
+						class="group transition-transform hover:-translate-y-2 cursor-pointer"
+						onclick="openModal(
+					'Ahmad Rizki',
+					'Ketua kelas Teknik Komputer A yang aktif dan bertanggung jawab.',
+					'https:https://www.instagram.com/ridho_firmansyah19/',
+					'https://link-ke-linkedin.com',
+					'https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=1&orientation=squarish'
+					)"
+					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
 								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20male%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=7&orientation=squarish"
@@ -354,7 +417,16 @@
 							<p class="text-gray-600">Anggota</p>
 						</div>
 					</div>
-					<div class="group transition-transform hover:-translate-y-2">
+					<div
+						class="group transition-transform hover:-translate-y-2 cursor-pointer"
+						onclick="openModal(
+					'Ahmad Rizki',
+					'Ketua kelas Teknik Komputer A yang aktif dan bertanggung jawab.',
+					'https:https://www.instagram.com/ridho_firmansyah19/',
+					'https://link-ke-linkedin.com',
+					'https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=1&orientation=squarish'
+					)"
+					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
 								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20female%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=8&orientation=squarish"
@@ -370,6 +442,22 @@
 				</div>
 			</div>
 		</section>
+		<!-- Modal Background -->
+		<!-- Modal -->
+		<!-- klik luar nutup -->
+		<div id="profileModal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50" onclick="closeModal()">
+			<!-- klik dalam gak nutup -->
+			<div class="bg-white rounded-lg p-6 max-w-sm w-full relative" onclick="event.stopPropagation()">
+				<img id="modalImage" src="" alt="Profile" class="w-32 h-32 rounded-full mx-auto mb-4" />
+				<h3 id="modalName" class="text-xl font-bold text-center mb-2"></h3>
+				<p id="modalDescription" class="text-center text-gray-600 mb-4"></p>
+				<div class="flex justify-center gap-4">
+					<a id="modalInstagram" href="#" target="_blank" class="text-pink-500">Instagram</a>
+					<a id="modalLinkedIn" href="#" target="_blank" class="text-blue-600">LinkedIn</a>
+				</div>
+			</div>
+		</div>
+
 		<section id="sosial" class="bg-primary text-white py-20 px-6">
 			<div class="container mx-auto text-center">
 				<h2 class="text-4xl font-bold mb-8">Sosial Media Kelas</h2>
