--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<nav id="navbar" class="fixed top-0 left-0 right-0 60 backdrop-blur-sm z-50 text-white transition-colors duration-300">
 			<div class="container mx-auto px-6">
 				<div class="flex justify-between items-center h-16">
-					<div class="text-xl font-bold flex items-center gap-2"><img src="../img/380938694_1318676755440881_1850078113817887475_n.png" alt="profil" class="w-10 h-10 rounded-full object-cover" />Teknik Komputer A</div>
+					<div class="text-xl font-bold flex items-center gap-2"><img src="img/380938694_1318676755440881_1850078113817887475_n.png" alt="profil" class="w-10 h-10 rounded-full object-cover" />Teknik Komputer A</div>
 
 					<!-- Hamburger Icon -->
 					<button id="menu-btn" class="md:hidden focus:outline-none text-2xl">
@@ -44,7 +44,7 @@
 		</nav>
 		<!-- Hero Section -->
 		<div id="hero" class="relative min-h-screen overflow-hidden">
-			<div class="absolute inset-0 bg-cover bg-center blur-bg" style="background-image: url('../img/NUSTEL.IN_33.webp')"></div>
+			<div class="absolute inset-0 bg-cover bg-center blur-bg" style="background-image: url('img/NUSTEL.IN_33.webp')"></div>
 			<div class="hero-gradient relative inset-0 pt-16">
 				<div class="container mx-auto px-4 h-screen flex flex-col justify-center items-center text-white relative z-10">
 					<h1 class="text-6xl font-bold mb-2 text-center">Teknik Komputer A</h1>
@@ -83,7 +83,7 @@
 
 						<!-- Gambar (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
-							<img src="../img/1 (1).webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/1 (1).webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 					</div>
 
@@ -91,7 +91,7 @@
 					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
 						<!-- Gambar (mobile atas, desktop kiri) -->
 						<div class="md:w-5/12 order-2 md:order-1">
-							<img src="../img/2.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/2.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 
 						<!-- Titik Tengah -->
@@ -119,14 +119,14 @@
 
 						<!-- Gambar (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
-							<img src="../img/IMG_0024.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/IMG_0024.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 					</div>
 					<!-- SEMESTER 4 -->
 					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
 						<!-- Gambar (mobile atas, desktop kiri) -->
 						<div class="md:w-5/12 order-2 md:order-1">
-							<img src="../img/IMG_1179.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/IMG_1179.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 
 						<!-- Titik Tengah -->
@@ -157,14 +157,14 @@
 
 						<!-- Gambar (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
-							<img src="../img/WhatsApp Image 2025-01-14 at 19.09.19.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/WhatsApp Image 2025-01-14 at 19.09.19.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 					</div>
 					<!-- SEMESTER 6 -->
 					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
 						<!-- Gambar (mobile atas, desktop kiri) -->
 						<div class="md:w-5/12 order-2 md:order-1">
-							<img src="../img/WhatsApp Image 2025-04-27 at 11.06.56.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/WhatsApp Image 2025-04-27 at 11.06.56.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 
 						<!-- Titik Tengah -->
@@ -194,7 +194,7 @@
 
 						<!-- Gambar (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
-							<img src="../img/WhatsApp Image 2025-01-14 at 19.09.19.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/WhatsApp Image 2025-01-14 at 19.09.19.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 					</div>
 				</div>
@@ -214,7 +214,7 @@
 				<!-- Ketua -->
 				<div class="flex justify-center mb-12">
 					<div class="flex flex-col items-center">
-						<img src="../img/ketua.webp" alt="Ketua" class="w-24 h-24 rounded-full object-cover mb-2 border-4 border-primary" />
+						<img src="img/ketua.webp" alt="Ketua" class="w-24 h-24 rounded-full object-cover mb-2 border-4 border-primary" />
 						<h3 class="font-semibold text-lg">Irfan Wahyudi</h3>
 						<p class="text-gray-600">Ketua</p>
 					</div>
@@ -223,22 +223,22 @@
 				<!-- Sekretaris, Wakil, Bendahara -->
 				<div class="grid grid-cols-2 md:grid-cols-4 gap-8 mb-12 justify-center">
 					<div class="flex flex-col items-center">
-						<img src="../img/sek1.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<img src="img/sek1.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
 						<h3 class="font-semibold text-sm">Nabila Febrianti</h3>
 						<p class="text-gray-500 text-sm">Sekretaris 1</p>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="../img/sek2.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<img src="img/sek2.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
 						<h3 class="font-semibold text-sm">Baiq Raehul Aema Oktari</h3>
 						<p class="text-gray-500 text-sm">Sekretaris 2</p>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="../img/wakil.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<img src="img/wakil.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
 						<h3 class="font-semibold text-sm">Muhammad Samsul Al Kifli</h3>
 						<p class="text-gray-500 text-sm">Wakil Ketua</p>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="../img/bendahara.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<img src="img/bendahara.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
 						<h3 class="font-semibold text-sm">Liana</h3>
 						<p class="text-gray-500 text-sm">Bendahara</p>
 					</div>
@@ -247,11 +247,11 @@
 				<!-- Anggota -->
 				<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6">
 					<div class="flex flex-col items-center">
-						<img src="../img/anggota1.webp" class="w-16 h-16 rounded-full object-cover mb-2 border" />
+						<img src="img/anggota1.webp" class="w-16 h-16 rounded-full object-cover mb-2 border" />
 						<h3 class="text-sm font-medium">Nisa Pra Utami</h3>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="../img/anggota2.webp" class="w-16 h-16 rounded-full object-cover mb-2 border" />
+						<img src="img/anggota2.webp" class="w-16 h-16 rounded-full object-cover mb-2 border" />
 						<h3 class="text-sm font-medium">Ripal Algifari</h3>
 					</div>
 					<!-- Tambah anggota lain sesuai kebutuhan -->
