--- a/galeri/galeri.html
+++ b/galeri/galeri.html
@@ -6,6 +6,7 @@
 		<title>Galeri Kelas Teknik Komputer A</title>
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" rel="stylesheet" />
+		<link rel="shortcut icon" href="../img/380938694_1318676755440881_1850078113817887475_n.png" type="image/x-icon" />
 		<link rel="stylesheet" href="galeri.css" />
 	</head>
 	<body>
@@ -219,6 +220,7 @@
 		<div class="scroll-top">
 			<i class="ri-arrow-up-line"></i>
 		</div>
+
 		<script src="galeri.js"></script>
 	</body>
 </html>
