--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" rel="stylesheet" />
+		<link rel="shortcut icon" href="img/380938694_1318676755440881_1850078113817887475_n.png" type="image/x-icon" />
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body class="font-['Inter']">
@@ -164,7 +165,7 @@
 					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
 						<!-- Gambar (mobile atas, desktop kiri) -->
 						<div class="md:w-5/12 order-2 md:order-1">
-							<img src="img/WhatsApp Image 2025-04-27 at 11.06.56.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/WhatsApp Image 2025-04-27 at 11.07.08 (1).webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 
 						<!-- Titik Tengah -->
@@ -463,7 +464,7 @@
 				<h2 class="text-4xl font-bold mb-8">Sosial Media Kelas</h2>
 				<p class="text-lg mb-4">Yuk ikuti dan dukung aktivitas kami di media sosial!</p>
 				<div class="flex justify-center gap-6 text-3xl">
-					<a href="#" class="hover:text-gray-300"><i class="ri-instagram-line"></i></a>
+					<a href="https://www.instagram.com/ridho_firmansyah19/" target="_blank" class="hover:text-gray-300"><i class="ri-instagram-line"></i></a>
 					<a href="#" class="hover:text-gray-300"><i class="ri-facebook-line"></i></a>
 					<a href="#" class="hover:text-gray-300"><i class="ri-whatsapp-line"></i></a>
 				</div>
