--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<body class="font-['Inter']">
 		<!-- loading.html -->
 		<div id="loading-screen">
-			<img class="logo" loading="lazy" src="img/FT.png" alt="logo 1" />
-			<img class="logo" loading="lazy" src="img/380938694_1318676755440881_1850078113817887475_n.png" alt="logo 2" />
-			<img class="logo" loading="lazy" src="img/Proyek 38.png" alt="logo 3" />
+			<img class="logo" src="img/FT.png" alt="logo 1" />
+			<img class="logo" src="img/380938694_1318676755440881_1850078113817887475_n.png" alt="logo 2" />
+			<img class="logo" src="img/Proyek 38.png" alt="logo 3" />
 		</div>
 
 		<nav id="navbar" class="fixed top-0 left-0 right-0 60 backdrop-blur-sm z-50 text-white transition-colors duration-300">
