--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<nav id="navbar" class="fixed top-0 left-0 right-0 60 backdrop-blur-sm z-50 text-white transition-colors duration-300">
 			<div class="container mx-auto px-6">
 				<div class="flex justify-between items-center h-16">
-					<div class="text-xl font-bold flex items-center gap-2"><img src="img/380938694_1318676755440881_1850078113817887475_n.png" alt="profil" class="w-10 h-10 rounded-full object-cover" />Teknik Komputer A</div>
+					<div class="text-xl font-bold flex items-center gap-2"><img src="img/380938694_1318676755440881_1850078113817887475_n.png" loading="lazy" alt="profil" class="w-10 h-10 rounded-full object-cover" />Teknik Komputer A</div>
 
 					<!-- Hamburger Icon -->
 					<button id="menu-btn" class="md:hidden focus:outline-none text-2xl">
@@ -84,7 +84,7 @@
 
 						<!-- Gambar (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
-							<img src="img/1 (1).webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/1 (1).webp" loading="lazy" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 					</div>
 
@@ -92,7 +92,7 @@
 					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
 						<!-- Gambar (mobile atas, desktop kiri) -->
 						<div class="md:w-5/12 order-2 md:order-1">
-							<img src="img/2.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/2.webp" loading="lazy" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 
 						<!-- Titik Tengah -->
@@ -120,14 +120,14 @@
 
 						<!-- Gambar (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
-							<img src="img/IMG_0024.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/IMG_0024.webp" loading="lazy" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 					</div>
 					<!-- SEMESTER 4 -->
 					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
 						<!-- Gambar (mobile atas, desktop kiri) -->
 						<div class="md:w-5/12 order-2 md:order-1">
-							<img src="img/IMG_1179.webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/IMG_1179.webp" loading="lazy" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 
 						<!-- Titik Tengah -->
@@ -158,14 +158,14 @@
 
 						<!-- Gambar (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
-							<img src="img/WhatsApp Image 2025-01-14 at 19.09.19.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/WhatsApp Image 2025-01-14 at 19.09.19.webp" loading="lazy" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 					</div>
 					<!-- SEMESTER 6 -->
 					<div class="mb-20 flex flex-col md:flex-row items-center md:justify-between relative">
 						<!-- Gambar (mobile atas, desktop kiri) -->
 						<div class="md:w-5/12 order-2 md:order-1">
-							<img src="img/WhatsApp Image 2025-04-27 at 11.07.08 (1).webp" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/WhatsApp Image 2025-04-27 at 11.07.08 (1).webp" loading="lazy" alt="2023" class="rounded-xl shadow-lg transform rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 
 						<!-- Titik Tengah -->
@@ -195,7 +195,7 @@
 
 						<!-- Gambar (mobile bawah, desktop kanan) -->
 						<div class="md:w-5/12 mt-6 md:mt-0 order-1 md:order-2">
-							<img src="img/WhatsApp Image 2025-01-14 at 19.09.19.webp" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
+							<img src="img/WhatsApp Image 2025-01-14 at 19.09.19.webp" loading="lazy" alt="2022" class="rounded-xl shadow-lg transform -rotate-2 w-full max-w-sm mx-auto" />
 						</div>
 					</div>
 				</div>
@@ -215,7 +215,7 @@
 				<!-- Ketua -->
 				<div class="flex justify-center mb-12">
 					<div class="flex flex-col items-center">
-						<img src="img/ketua.webp" alt="Ketua" class="w-24 h-24 rounded-full object-cover mb-2 border-4 border-primary" />
+						<img src="img/ketua.webp" loading="lazy" alt="Ketua" class="w-24 h-24 rounded-full object-cover mb-2 border-4 border-primary" />
 						<h3 class="font-semibold text-lg">Irfan Wahyudi</h3>
 						<p class="text-gray-600">Ketua</p>
 					</div>
@@ -224,22 +224,22 @@
 				<!-- Sekretaris, Wakil, Bendahara -->
 				<div class="grid grid-cols-2 md:grid-cols-4 gap-8 mb-12 justify-center">
 					<div class="flex flex-col items-center">
-						<img src="img/sek1.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<img src="img/sek1.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
 						<h3 class="font-semibold text-sm">Nabila Febrianti</h3>
 						<p class="text-gray-500 text-sm">Sekretaris 1</p>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="img/sek2.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<img src="img/sek2.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
 						<h3 class="font-semibold text-sm">Baiq Raehul Aema Oktari</h3>
 						<p class="text-gray-500 text-sm">Sekretaris 2</p>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="img/wakil.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<img src="img/wakil.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
 						<h3 class="font-semibold text-sm">Muhammad Samsul Al Kifli</h3>
 						<p class="text-gray-500 text-sm">Wakil Ketua</p>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="img/bendahara.webp" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
+						<img src="img/bendahara.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border-2 border-gray-300" />
 						<h3 class="font-semibold text-sm">Liana</h3>
 						<p class="text-gray-500 text-sm">Bendahara</p>
 					</div>
@@ -248,11 +248,11 @@
 				<!-- Anggota -->
 				<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6">
 					<div class="flex flex-col items-center">
-						<img src="img/anggota1.webp" class="w-16 h-16 rounded-full object-cover mb-2 border" />
+						<img src="img/anggota1.webp" loading="lazy" class="w-16 h-16 rounded-full object-cover mb-2 border" />
 						<h3 class="text-sm font-medium">Nisa Pra Utami</h3>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="img/anggota2.webp" class="w-16 h-16 rounded-full object-cover mb-2 border" />
+						<img src="img/anggota2.webp" loading="lazy" class="w-16 h-16 rounded-full object-cover mb-2 border" />
 						<h3 class="text-sm font-medium">Ripal Algifari</h3>
 					</div>
 					<!-- Tambah anggota lain sesuai kebutuhan -->
@@ -277,6 +277,7 @@
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
 								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=1&orientation=squarish"
+								loading="lazy"
 								alt="Anggota 1"
 								class="w-full h-full object-cover"
 							/>
@@ -299,6 +300,7 @@
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
 								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20female%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=2&orientation=squarish"
+								loading="lazy"
 								alt="Anggota 2"
 								class="w-full h-full object-cover"
 							/>
@@ -321,6 +323,7 @@
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
 								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20male%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=3&orientation=squarish"
+								loading="lazy"
 								alt="Anggota 3"
 								class="w-full h-full object-cover"
 							/>
@@ -343,6 +346,7 @@
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
 								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20female%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=4&orientation=squarish"
+								loading="lazy"
 								alt="Anggota 4"
 								class="w-full h-full object-cover"
 							/>
@@ -365,6 +369,7 @@
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
 								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20male%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=5&orientation=squarish"
+								loading="lazy"
 								alt="Anggota 5"
 								class="w-full h-full object-cover"
 							/>
@@ -387,6 +392,7 @@
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
 								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20female%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=6&orientation=squarish"
+								loading="lazy"
 								alt="Anggota 6"
 								class="w-full h-full object-cover"
 							/>
@@ -409,6 +415,7 @@
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
 								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20male%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=7&orientation=squarish"
+								loading="lazy"
 								alt="Anggota 7"
 								class="w-full h-full object-cover"
 							/>
@@ -431,6 +438,7 @@
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
 							<img
 								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20female%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=8&orientation=squarish"
+								loading="lazy"
 								alt="Anggota 8"
 								class="w-full h-full object-cover"
 							/>
@@ -449,7 +457,7 @@
 		<div id="profileModal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50" onclick="closeModal()">
 			<!-- klik dalam gak nutup -->
 			<div class="bg-white rounded-lg p-6 max-w-sm w-full relative" onclick="event.stopPropagation()">
-				<img id="modalImage" src="" alt="Profile" class="w-32 h-32 rounded-full mx-auto mb-4" />
+				<img id="modalImage" src="" loading="lazy" alt="Profile" class="w-32 h-32 rounded-full mx-auto mb-4" />
 				<h3 id="modalName" class="text-xl font-bold text-center mb-2"></h3>
 				<p id="modalDescription" class="text-center text-gray-600 mb-4"></p>
 				<div class="flex justify-center gap-4">
