--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<a href="#tentang" class="block px-2 py-1 rounded-md hover:bg-white/10 transition-colors duration-200">Tentang</a>
 					<a href="#anggota" class="block px-2 py-1 rounded-md hover:bg-white/10 transition-colors duration-200">Anggota</a>
 					<a href="#sosial" class="block px-2 py-1 rounded-md hover:bg-white/10 transition-colors duration-200">Sosial Media</a>
-					<a href="galeri.html" class="block px-2 py-1 rounded-md hover:bg-white/10 transition-colors duration-200">Galeri</a>
+					<a href="galeri/galeri.html" class="block px-2 py-1 rounded-md hover:bg-white/10 transition-colors duration-200">Galeri</a>
 				</div>
 			</div>
 		</nav>
