Perubahan Foto anggota

--- a/galeri/galeri.html
+++ b/galeri/galeri.html
@@ -27,6 +27,18 @@
 			<div class="gallery-grid">
 				<!-- Image with description -->
 				<div class="gallery-item">
+					<img
+						src="../img/WhatsApp Image 2025-07-31 at 13.18.21.webp"
+						loading="lazy"
+						alt="Kelas belajar"
+						data-title="Dies Natalis"
+						data-description="Seru banget kegitan Dies Natalis cuy, ada banyak project dipamerkan, Dapat ilmu baru^_^."
+					/>
+				</div>
+				<div class="gallery-item">
+					<img src="../img/WhatsApp Image 2025-07-31 at 14.16.54.webp" loading="lazy" alt="Kelas belajar" data-title="Project PLC" data-description="Presentasi project PLC coy aman aman aja sih😎😎." />
+				</div>
+				<div class="gallery-item">
 					<img src="../img/1 (1).webp" loading="lazy" alt="Kelas belajar" data-title="Kelas Belajar" data-description="Foto dulu semoga bertahan sampai akhir.." />
 				</div>
 				<div class="gallery-item">
@@ -109,6 +121,9 @@
 				</div>
 
 				<div class="gallery-item">
+					<img src="../img/11.webp" loading="lazy" alt="Seminar Teknologi" data-title="Liburan Kelas Semester 2" data-description="Liburan dikit lah untuk menambah keeratan aseeeekkk..." />
+				</div>
+				<div class="gallery-item">
 					<img
 						src="../img/NUSTEL.IN_13.webp"
 						loading="lazy"
@@ -175,6 +190,15 @@
 						alt="Studi Lapangan"
 						data-title="Studi Lapangan"
 						data-description="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus.."
+					/>
+				</div>
+				<div class="gallery-item">
+					<img
+						src="../img/IMG-20221222-WA0035.webp"
+						loading="lazy"
+						alt="Studi Lapangan"
+						data-title="Praktik Solder"
+						data-description="Praktik Solder di Mata Kuliah Mikrokontroler 1, agak deg - dege-an sih, tapi seru dapat ilmu baru hehe........"
 					/>
 				</div>
 
