--- a/index.html
+++ b/index.html
@@ -248,12 +248,16 @@
 				<!-- Anggota -->
 				<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6">
 					<div class="flex flex-col items-center">
-						<img src="img/anggota1.webp" loading="lazy" class="w-16 h-16 rounded-full object-cover mb-2 border" />
+						<img src="img/anggota1.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border" />
 						<h3 class="text-sm font-medium">Nisa Pra Utami</h3>
 					</div>
 					<div class="flex flex-col items-center">
-						<img src="img/anggota2.webp" loading="lazy" class="w-16 h-16 rounded-full object-cover mb-2 border" />
+						<img src="img/anggota2.webp" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border" />
 						<h3 class="text-sm font-medium">Ripal Algifari</h3>
+					</div>
+					<div class="flex flex-col items-center">
+						<img src="img/WhatsApp Image 2025-08-01 at 20.25.15.jpeg" loading="lazy" class="w-20 h-20 rounded-full object-cover mb-2 border" />
+						<h3 class="text-sm font-medium">Ridho Firmansyah</h3>
 					</div>
 					<!-- Tambah anggota lain sesuai kebutuhan -->
 				</div>
@@ -382,23 +386,18 @@
 					<div
 						class="group transition-transform hover:-translate-y-2 cursor-pointer"
 						onclick="openModal(
-					'Ahmad Rizki',
-					'Ketua kelas Teknik Komputer A yang aktif dan bertanggung jawab.',
-					'https:https://www.instagram.com/ridho_firmansyah19/',
+					'Ridho Firmansyah',
+					'Halooo, kenalin Namaku Ridho Firmansyah, saya berasal dari suatu desa bernama Sawing. Belajar adalah salah satu hal favorit saya, karena itu saya mempelajari banyak hal fundamental, seperti buat Website, Editing Foto, Editing Video, Power Point Slide dan ada lagi yang lain sih. Kalo penasaran bisa cek Instagram ku yaaaaa😁😁.',
+					'https://www.instagram.com/ridho_firmansyah19/',
 					'https://link-ke-linkedin.com',
-					'https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=1&orientation=squarish'
+					'img/IMG_20221202_113223.jpg'
 					)"
 					>
 						<div class="aspect-square rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all">
-							<img
-								src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20asian%20female%20student%20wearing%20casual%20attire%2C%20natural%20lighting%2C%20clean%20background%2C%20high%20quality%2C%20photorealistic&width=400&height=400&seq=6&orientation=squarish"
-								loading="lazy"
-								alt="Anggota 6"
-								class="w-full h-full object-cover"
-							/>
+							<img src="img/WhatsApp Image 2025-08-01 at 20.27.50.webp" loading="lazy" alt="Anggota 6" class="w-full h-full object-cover" />
 						</div>
 						<div class="mt-4 text-center">
-							<h3 class="font-semibold text-lg">Maya Indah</h3>
+							<h3 class="font-semibold text-lg">Ridho Firmansyah</h3>
 							<p class="text-gray-600">Anggota</p>
 						</div>
 					</div>
